# tm

./: LICENSE  README.md  pyproject.toml
docs/: tm.1
src/tmux_manager/: app.py  cli.py  config.py  models.py  styles.tcss  tmux.py  util.py
src/tmux_manager/screens/: modals.py  sessionizer.py  sessions.py
tests/: test_app.py  test_cli.py  test_config.py  test_tmux.py
