[project]
name = "tmux-manager"
version = "0.1.0"
description = "Interactive terminal UI for managing tmux sessions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["textual>=1.0"]

[project.scripts]
tm = "tmux_manager.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tmux_manager"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
